SERVER-47477 Report failures on refresh and remove in sessions collection sharded

(cherry picked from commit 2ea63cd234669d3cfe09292f6f978f7bf768d0d6)