src/mongo/db/logical_session_cache_factory_mongod.cpp
@@ -40,8 +40,8 @@
 #include "mongo/db/session_catalog_mongod.h"
 #include "mongo/db/sessions_collection_config_server.h"
 #include "mongo/db/sessions_collection_rs.h"
-#include "mongo/db/sessions_collection_sharded.h"
 #include "mongo/db/sessions_collection_standalone.h"
+#include "mongo/s/sessions_collection_sharded.h"
 
 namespace mongo {
 
